trunk/yanl/examples/t1/correct/0403_if_if_emptyelse_else.yanl
program me;
var a:integer;
begin 
if true then 
    if true then 
        a:=2 
    else 
else a:=1
end.
