trunk/yanl/examples/t1/fail/0101_var_numbers_at_begining.yanl
program me;
var 1a:integer;
begin
end.
